def taskRequests = getGradle().getStartParameter().getTaskRequests().toString()
def isFoss = taskRequests.contains("Foss") || taskRequests.contains("foss")

buildscript {
    repositories {
        maven {
            url 'https://maven.fabric.io/public'
        }
        mavenCentral()
    }
    dependencies {
        classpath 'com.google.gms:google-services:3.1.0'
        classpath 'io.fabric.tools:gradle:1.24.4'
    }
}

apply plugin: 'com.android.application'
apply plugin: 'jacoco-android'
if(!isFoss) {
    apply plugin: 'io.fabric'
}

android {
    buildToolsVersion '26.0.2'
    compileSdkVersion 26
    useLibrary 'org.apache.http.legacy'

    flavorDimensions "main"

    defaultConfig {
        applicationId "org.openhab.habdroid"
        minSdkVersion 14
        targetSdkVersion 25
        multiDexEnabled true
        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        def IS_DEVELOPER = "IS_DEVELOPER"
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField 'boolean', IS_DEVELOPER, 'false'
            buildConfigField "java.util.Date", "buildTime", "new java.util.Date(" + System.currentTimeMillis() + "L)"
        }
        debug {
            minifyEnabled false
            buildConfigField 'boolean', IS_DEVELOPER, 'true'
            buildConfigField "java.util.Date", "buildTime", "new java.util.Date(" + System.currentTimeMillis() + "L)"
            pseudoLocalesEnabled true
            testCoverageEnabled true
        }
    }
    productFlavors {
        full {
            dimension "main"
        }
        foss {
            dimension "main"
        }
    }
    testOptions {
        unitTests.returnDefaultValues = true
    }
    lintOptions {
        lintConfig file("lint.xml")
        abortOnError false
    }
    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

repositories {
    jcenter()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
    google()
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile "com.android.support:appcompat-v7:26.1.0"
    compile "com.android.support:support-v4:26.1.0"
    compile "com.android.support:recyclerview-v7:26.1.0"
    compile "com.android.support:design:26.1.0"
    compile 'com.android.support:multidex:1.0.2'
    compile 'com.android.support.constraint:constraint-layout:1.0.2'
    compile 'org.jmdns:jmdns:3.5.1'
    compile 'com.squareup.okhttp3:okhttp:3.6.0'
    compile 'com.github.loopj:android-smart-image-view:d09783b9508af5996361437a54cc234b662e4c78'
    //androidsvg commit as of July 16th 2017
    compile 'com.github.BigBadaboom:androidsvg:418cf676849b200cacf3465478079f39709fe5b1'
    compile 'com.github.apl-devs:appintro:v4.2.2'
    // GCM
    fullCompile 'com.google.android.gms:play-services-gcm:11.4.2'
    fossCompile project(':gcmdummy')

    // About screen
    compile 'com.github.daniel-stoneuk:material-about-library:2.2.3-support26.1.0'

    // This should already be included in the aboutlibraries dependency, however, it somehow isn't
    compile "com.android.support:cardview-v7:26.1.0"
    compile('com.mikepenz:aboutlibraries:6.0.1@aar') {
        transitive = true
    }

    //crash reporting
    fullCompile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
        transitive = true
    }

    fullCompile 'com.google.firebase:firebase-core:11.4.2'

    testCompile 'org.mockito:mockito-core:2.7.6'
    testCompile 'junit:junit:4.12'
    testCompile 'org.json:json:20160810'

    // PowerMock
    testCompile 'org.powermock:powermock-core:1.7.0'
    testCompile 'org.powermock:powermock-api-mockito2:1.7.0'
    testCompile 'org.powermock:powermock-module-junit4:1.7.0'

    // Espresso UI tests
    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
    androidTestCompile 'com.android.support.test:runner:1.0.1'
    androidTestCompile 'com.android.support.test:rules:1.0.1'
    androidTestCompile 'com.android.support.test.espresso:espresso-intents:3.0.1'
    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
}

if(!isFoss) {
    apply plugin: 'com.google.gms.google-services'
}